# deltective

./: .gitignore  CLAUDE.md  README.md  USABILITY_REVIEW.md  add_demo_history.py  create_demo_table.py  pyproject.toml  pytest.ini
.beads/: de-5tv-review.md
rust/: .gitignore  Cargo.toml  NOTES.md  README.md
rust/src/: cli.rs  insights.rs  inspector.rs  main.rs  tui_app.rs
rust/src/tui_app/: configuration.rs  history.rs  insights.rs  overview.rs  timeline.rs
src/deltective/: __init__.py  cli.py  display.py  history_viewer.py  insights.py  inspector.py  tui_app.py
tests/: README.md  __init__.py  conftest.py  test_azure_integration.py  test_cli.py  test_insights.py  test_inspector.py  test_utilities.py
