[package]
name = "deltective"
version = "0.1.0"
edition = "2021"
description = "A detective for your Delta tables - inspect, analyze, and optimize"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive"] }

# TUI
ratatui = "0.27"
crossterm = "0.28"

# Delta Lake
deltalake = "0.18"
object_store = "0.10"

# Azure support
azure_identity = "0.20"
azure_storage_blobs = "0.20"
azure_core = "0.20"

# Async runtime
tokio = { version = "1.40", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date/time
# Pin chrono to avoid quarter() method conflict with arrow-arith
# See: https://github.com/apache/arrow-rs/issues/7196
chrono = ">= 0.4.34, < 0.4.40"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
dirs = "5.0"

[[bin]]
name = "deltective"
path = "src/main.rs"

